implemented swagger tags description and security
